# lib/Controller/RoomController.php
@@ -3376,6 +3376,9 @@ class RoomController extends AEnvironmentAwareOCSController {
 			if (isset($data['config']['call']['start-without-audio'])) {
 				$data['config']['call']['start-without-audio'] = $this->talkConfig->getCallsStartWithoutAudio($this->userId);
 			}
+			if (isset($data['config']['call']['start-without-media'])) {
+				$data['config']['call']['start-without-media'] = $this->talkConfig->getCallsStartWithoutMedia($this->userId);
+			}
 			if (isset($data['config']['call']['start-without-video'])) {
 				$data['config']['call']['start-without-video'] = $this->talkConfig->getCallsStartWithoutVideo($this->userId);
 			}
