# openapi-backend-signaling.json
@@ -97,6 +97,7 @@
                                     "sip-dialout-enabled",
                                     "default-phone-region",
                                     "can-enable-sip",
+                                    "start-without-media",
                                     "start-without-audio",
                                     "start-without-video",
                                     "max-duration",
@@ -167,6 +168,11 @@
                                     "can-enable-sip": {
                                         "type": "boolean",
                                         "description": "Whether the user can enable SIP for conversations"
+                                    },
+                                    "start-without-media": {
+                                        "type": "boolean",
+                                        "deprecated": true,
+                                        "description": "Whether calls start without media by default"
                                     },
                                     "start-without-audio": {
                                         "type": "boolean",
